<resources>
    <string name="app_name">AplicacionColegio</string>
    <string name="mensajeBienvenida">Bienvenido!</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="contraseña">Contraseña</string>
    <string name="contraseña2">Repite contraseña</string>
    <string name="contraseñaHint">Introduce tu contraseña</string>
    <string name="contraseñaOlvidada">Se me ha olvidado la contraseña</string>
    <string name="icono">Icono de inicio</string>
    <string name="inicio">Iniciar Sesion</string>
    <string name="miCuenta">Editar cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="puesto">Puesto</string>
    <string name="registro">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="usuarioHint">Introduce tu nombre de usuario</string>
    <string name="menu_deslizante">Menu deslizante</string>
    <string name="abrir_menu_deslizante">Abrir</string>
    <string name="cerrar_menu_deslizante">Cerrar</string>
    <string name="permisos">Permisos</string>
    <string name="tareasAdministrativas">Tareas Administrativas</string>
    <string name="ausencias">Ausencias</string>
    <string name="calendario">Calendario</string>
    <string name="avisos">Avisos</string>
    <string name="mensaje">Enviar Mensaje</string>
    <string name="tareas">Fijar Tareas</string>
    <string name="guardias">Guardias</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo electronico</string>
    <string name="jefe">Jefe de Estudios</string>
    <string name="coordinador">Coordinador de Ciclo</string>
    <string name="docente">Docente</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="sexo">Sexo</string>
    <string name="guardar">Guardar</string>
    <string name="permisosExplicacion">Esta es la página de permisos, desde aquí puede hacer gestión de sus permisos</string>
    <string name="permisosSolicitud">Solicitar</string>
    <string name="permisosEstado">Consulta de estados</string>
    <string name="permisosPendientes">Pendientes</string>
    <string-array name="puestos">
        <item>Jefe de Estudios</item>
        <item>Coordinador de Ciclo</item>
        <item>Docente</item>
    </string-array>
    <string name="title_activity_permisos">PermisosActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_estados_permisos">EstadosPermisosActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="menu_principal">Menú Principal</string>
    <string name="lista_permisos">Lista de Permisos</string>
    <string name="escoge_perfil">"Escoge tu tipo de perfil para guardar los cambios"</string>
    <string name="permiso_razpn">Razon</string>
    <string name="tipo_permiso">Tipo de Permiso</string>
    <string-array name="permisos_razones">
        <item>Familia</item>
        <item>Nacimiento, adopción o acogimiento</item>
        <item>Asuntos personales</item>
        <item>Salud propia</item>
        <item>Formación</item>
        <item>Deberes civiles</item>
    </string-array>
    <string-array name="permisos_familia">
        <item>Permiso por cuidado de un hijo menor afectado por cáncer u otra enfermedad grave</item>
        <item>Permiso por matrimonio de un familiar</item>
        <item>Permiso por deberes relacionados con la conciliación de la vida familiar y laboral</item>
        <item>Permiso parental por hijo menor de 8 años</item>
        <item>Permiso por accidente, enfermedad grave u hospitalización de un familiar</item>
        <item>Permiso por fallecimiento de un familiar</item>
        <item>Permiso por cuidado de hijo menor de 16 años</item>
        <item>Permiso por cuidado de familiar de primer grado por enfermedad muy grave</item>
        <item>Reducción de jornada por guarda legal</item>
    </string-array>
    <string-array name="permisos_naa">
        <item>Permiso para tratamientos de fecundación asistida, exámenes prenatales y técnicas de preparación al parto</item>
        <item>Permiso por nacimiento para la madre biológica</item>
        <item>Permiso por lactancia</item>
        <item>Permiso por adopción, guarda o acogimiento por uno de los progenitores</item>

    </string-array>
    <string-array name="permisos_asuntos_personales">
        <item>Permiso por días de libre disposición</item>
        <item>Permiso por traslado de domicilio</item>
        <item>Permiso parcialmente retribuido</item>
        <item>Licencia por asuntos propios</item>
        <item>Licencia por matrimonio</item>
        <item>Reducción de jornada por interés particular</item>
    </string-array>
    <string-array name="permisos_salud_propia">
        <item>Permiso por enfermedad o accidente: Contingencias comunes y contingencias profesionales</item>
    </string-array>
    <string-array name="permisos_formacion">
        <item>Permiso por concurrencia a exámenes</item>
        <item>Licencia para asistir a actividades de formación</item>
        <item>Licencia por curso completo sin retribución</item>
    </string-array>
    <string-array name="permisos_deberes_civiles">
        <item>Permiso por deber inexcusable</item>
        <item>Permiso por elecciones europeas, generales, autonómicas y locales</item>
    </string-array>
    <string name="rellenarPermiso">Debes completar el permiso</string>
</resources>