<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">
    <group
        android:id="@+id/nav_unicas">
        <item
            android:id="@+id/nav_calendario"
            android:title="@string/calendario"/>
        <item
            android:id="@+id/nav_mensajes"
            android:title="@string/mensaje"/>
        <item
            android:id="@+id/nav_tareas"
            android:title="@string/tareas"/>
        <item
            android:id="@+id/nav_guardias"
            android:title="@string/guardias"/>
    </group>
    <group
        android:id="@+id/nav_fijas">
        <item
            android:id="@+id/nav_micuenta"
            android:title="@string/miCuenta"/>
        <item
            android:id="@+id/nav_cerrarSesion"
            android:title="@string/cerrarSesion"/>
    </group>
</menu>