<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout_jefe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermisosActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuPrincipal"
        android:background="@color/janna"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iconoColegio"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/icono"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permisosExplicacion"
            android:fontFamily="serif"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >
        </TextView>
        <Button
            android:id="@+id/permisosSolicitar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/permisosSolicitud"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

        </Button>
        <Button
            android:id="@+id/estados"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/permisosEstado"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

        </Button>

        <Button
            android:id="@+id/atras"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Atras"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

        </Button>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>